modules/analyze/html/adalanche.css
:root {
  /* SpinKit */
  --sk-size: 50px;
  --sk-color: white;
  /* Halfmoon */
  --primary-color: var(--yellow-color);
  --secondary-color: var(--indigo-color);
}

@font-face {
  font-family: Oswald;
  src: url(/external/Oswald-VariableFont_wght.ttf);
}

body {
  font-family: Oswald;
  font-variant: normal;
  overflow: hidden;
    z-index: -2;
}

button, input, optgroup, select, textarea {
  font-family: Oswald;
}

.no-wrap {
  white-space: nowrap;
}

.fullscreen {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0px;
  left: 0px;
}

#windows {
  width: 100%;
  height: 100%;
  position: absolute;
  pointer-events: none;
  z-index: 30;
}

.window {
  pointer-events: auto;
}

.window-front {
  z-index: 31;
}

.rotated-text-90 {
  -ms-writing-mode: tb-rl;
  -webkit-writing-mode: vertical-rl;
  writing-mode: vertical-rl;
  white-space: nowrap;
}

.rotated-text-270 {
  -ms-writing-mode: tb-rl;
  -webkit-writing-mode: vertical-rl;
  writing-mode: vertical-rl;
  transform: rotate(180deg);
  white-space: nowrap;
}

.fw-250 {
  max-width: 20em;
  width: 20em;
  display: inline-block;
}

#upperstatus {
  position: absolute;
  left: 50%;
  top: 0;
  transform: translate(-50%, 0%);
}

#progressbars {
  width: 600px;
}

#status {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 40;
}

#outerquery {
  position: absolute;
  left: 50%;
  bottom: 0px;
  transform: translate(-50%, 0%);
}

#offlineblur {
  backdrop-filter: blur(5px);
}

#lower-left {
  position: absolute;
  left: 10px;
  bottom: 10px;
  white-space: nowrap;
}

#commandbuttons .btn {
  margin-right: 5px;
}

.input-group div {
  margin-bottom: 5px;
}

.checkbox-button input[type='checkbox'],
.checkbox-button input[type='radio'] {
  display: none;
}

.checkbox-button input[type='checkbox']:checked+label.btn,
.checkbox-button input[type='radio']:checked+label.btn {
  background-color: var(--primary-color);
}

